dev-jupyter/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkjob-deployment
  namespace: spark
spec:
  selector:
    matchLabels:
      app: sparkjob
  replicas: 1
  template:
    metadata:
      labels:
        app: sparkjob
    spec:
      containers:
        - name: sparkjob-jupyterlab
          image: hyunsoolee0506/sparklab:0.5
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: sparkjob-vol
              mountPath: /workspace/spark
      volumes:
        - name: sparkjob-vol
          persistentVolumeClaim:
            claimName: sparkjob-pvc
