dev-jupyter/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparkjob-service
  namespace: spark
  labels:
    app: sparkjob
spec:
  type: NodePort
  selector:
    app: sparkjob
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: sparkjob-ui
  namespace: spark
  labels:
    app: sparkjob-ui
spec:
  type: NodePort
  selector:
    app: sparkjob-ui
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
