dev-jupyter/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparkjob-ingress
  namespace: spark
  annotations:
    alb.ingress.kubernetes.io/description: "Ingress for sparkjob"
    alb.ingress.kubernetes.io/load-balancer-name: "sparkjob-jupyter"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "9899"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/enable-sticky-session: "true"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sparkjob-service
                port:
                  number: 8888
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: sparkjob-ui
                port:
                  number: 4040
